--- a/gerenciador_jogos/templates/produtos/remover_produto.html
+++ b/gerenciador_jogos/templates/produtos/remover_produto.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="mt-5">
 	<h1 class="display-4">Remover produto</h1>
-	<p>Tem certeza de que deseja excluir o produto {{ produto.nome }}?</p>
+	<p>Tem certeza de que deseja excluir o Jogo {{ produto.nome }}?</p>
 	<form method="post">
 		{% csrf_token %}
 		<div class="mt-3 button-group">
